--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="hero-content">
                     <h2>Engage Your Audience Like Never Before</h2>
                     <p>Discover the power of interactive streaming with Text-To-Speech, Speech-To-Text and AI-driven engagement.</p>
-                    <a href="https://banterbrain.tv" class="btn-primary">Download</a>
+                    <a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/releases" class="btn-primary">Download</a>
                 </div>
             </section>
             <section id="features" class="section-bg">
