--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <p>Our AI companions support multiple languages and can interact with a diverse audience, making your stream more accessible and inclusive for viewers from different backgrounds.</p>
         </div>
         
-        <a href="#get-started" class="btn">Create Your AI Companion</a>
+       <a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/releases" class="btn-primary">Download</a> &nbsp; &nbsp; &nbsp; <a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy" class="btn">Build Your AI Companion</a> 
     </div>
 </section>
 
