--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         </div>
         
         <div class="community-links">
-            <a href="https://discord.banterbrain.tv" class="btn discord-btn">Join Us on Discord</a>
-	    <a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/wiki" class="btn discord-btn">Read the wiki</a>
-            <a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/" class="btn github-btn">View on GitHub</a>
+            <a href="https://discord.banterbrain.tv" class="btn">Join Us on Discord</a>
+	    <a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/wiki" class="btn">Read the wiki</a>
+            <a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/" class="btn">View on GitHub</a>
         </div>
     </div>
 </section>
