--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	            <li><a href="#streaming-companion">Enhance</a></li>
                     <li><a href="#open-source">Open Source</a></li>
                     <li><a href="#community">Community</a></li>
+	            <li><a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/wiki/FAQ">FAQ</a></li>
                     <li><a href="https://discord.banterbrain.tv" class="discord-link">Join Discord</a></li>
                 </ul>
             </nav>
