--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <ul>
                     <li><a href="#features">Features</a></li>
 	            <li><a href="#streaming-companion">Enhance</a></li>
+		     <li><a href="#technology">Technology</a></li>
                     <li><a href="#open-source">Open Source</a></li>
                     <li><a href="#community">Community</a></li>
 	            <li><a href="https://github.com/WhiskerWeirdo/BanterBrain-Buddy/wiki/FAQ">FAQ</a></li>
@@ -85,6 +86,35 @@
     </div>
 </section>
 
+<!-- Technology used Section -->
+<section class="technology-section">
+  <div class="container">
+    <h2>Technology</h2>
+    <p>Explore the cutting-edge technology services we offer to enhance your digital experience.</p>
+    
+    <div class="service">
+      <h3>Text-to-Speech Services</h3>
+      <p>Transform written content into natural-sounding speech with our range of Text-to-Speech (TTS) services. Choose from:</p>
+      <ul>
+        <li><strong>Windows Native</strong>: Leverage the built-in capabilities of Windows for seamless TTS integration.</li>
+        <li><strong>Azure TTS</strong>: Access a wide range of voices and languages with Azure's cloud-based TTS service.</li>
+        <li><strong>ElevenLabs</strong>: Experience high-quality, lifelike voices powered by ElevenLabs' advanced TTS technology.</li>
+      </ul>
+      <p>TTS services are available in both free and premium models, ensuring accessibility and advanced features for all users. Be sure to check out what suits your needs!</p>
+    </div>
+    
+    <div class="service">
+      <h3>Generative AI</h3>
+      <p>Engage with AI like never before. Our Generative AI services include:</p>
+      <ul>
+        <li><strong>OpenAI's ChatGPT</strong>: Setuph an AI-driven chatbot capable of understanding and generating human-like text that responds how you want it.</li>
+      </ul>
+      <p>While there is a free test subscription to use the features, for the API from Banterbrain you <strong>will</strong> need the paid service. Suggested is the pay-as-you-go subscription. For the pricing options you can find more information <a href="https://openai.com/pricing">here</a></p>
+    </div>
+  </div>
+</section>
+
+		
 <!-- Open Source Collaboration Section -->
 <section id="open-source" class="open-source-section">
     <div class="container">
