--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </section>
 
 <!-- Technology used Section -->
-<section class="technology-section">
+<section id="technology" class="technology-section">
   <div class="container">
     <h2>Technology</h2>
     <p>Explore the cutting-edge technology services we offer to enhance your digital experience.</p>
