--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <section id="technology" class="technology-section">
   <div class="container">
     <h2>Technology</h2>
-    <p>Explore the cutting-edge technology services we offer to enhance your digital experience.</p>
+    <p>Banterbrain Buddy is a native Windows application written in c# that supports multiple technologies to fit your streamer needs.</p>
     
     <div class="service">
       <h3>Text-to-Speech Services</h3>
